// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-webhook should handle non-existent webhook 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`update-webhook should update a webhook 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
